EEC_InitBackup/src/objects/City__c.object
<CustomObject>
    <description>List of MA cities a provider can operate from</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCRR</label>
        <referenceTo>CCRR__c</referenceTo>
        <relationshipLabel>Associated Cities</relationshipLabel>
        <relationshipName>Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EEC_Legacy_City_ID__c</fullName>
        <description>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</description>
        <externalId>true</externalId>
        <inlineHelpText>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</inlineHelpText>
        <label>EEC Legacy City ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>CCRR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_MA_Cities</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>CCRR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <label>All MA Cities</label>
    </listViews>
    <listViews>
        <fullName>All_Out_Of_MA</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
            <value>MA</value>
        </filters>
        <label>Out of MA Cities</label>
    </listViews>
    <listViews>
        <fullName>All_Without_CCRR</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>CCRR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCRR__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <label>All MA cities without CCRR</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>